modules/network/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.proj_name}-vpc"
  }
}

data "aws_availability_zones" "available" {
  state = "available"
}

resource "aws_subnet" "public_subnet" {
  count                   = var.subnet_count
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.${count.index}.0/24"
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name                                                 = "${var.proj_name}-pub-sub-${count.index}"
    "kubernetes.io/role/elb"                             = "1"
    "kubernetes.io/cluster/${var.proj_name}-eks-cluster" = "owned"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.proj_name}-igw"
  }
}

resource "aws_route_table" "rtbl" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.proj_name}-rtbl"
  }
}

resource "aws_route" "dflt_route" {
  route_table_id         = aws_route_table.rtbl.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "rtb_asc" {
  count          = var.subnet_count
  subnet_id      = aws_subnet.public_subnet[count.index].id
  route_table_id = aws_route_table.rtbl.id
}
